added git ignore

--- a/pages/forum.html
+++ b/pages/forum.html
@@ -85,8 +85,8 @@
         </div>
         <div id="article">
           <p class="articleText">
-            In an attempt to analyze the public opinion of a topic combined with
-            the actual function, humans haven’t yet come up with a
+            &emsp; In an attempt to analyze the public opinion of a topic
+            combined with the actual function, humans haven’t yet come up with a
             straightforward formula. Instead, we tend to use the term,
             underrated and overrated, distinguishing something with a negative
             or lackluster public percephen with great value from something with
@@ -96,15 +96,17 @@
             have disappointed expectations, those who hate the discussed topic,
             and the bandwagon followers. All of these opinions combine to impact
             the status of a topic, whether it is overrated or not. But is there
-            any legitimacy to this status? The beginning of the overrated web is
-            the glorification of a position or subject. For instance, if an
-            individual greatly values popularity and what it would be like to be
-            famous, this is where something being overrated begins. As a result
-            of this glorification, that individual works relentlessly to become
-            famous, perfecting their craft until they have accomplished their
-            goal. But in this transition to becoming famous, there is no sudden
-            switch in environment or demeanor, but rather a gradual evolution of
-            an individual and their public perception. Looking back to their
+            any legitimacy to this status?
+            <br />
+            &emsp;The beginning of the overrated web is the glorification of a
+            position or subject. For instance, if an individual greatly values
+            popularity and what it would be like to be famous, this is where
+            something being overrated begins. As a result of this glorification,
+            that individual works relentlessly to become famous, perfecting
+            their craft until they have accomplished their goal. But in this
+            transition to becoming famous, there is no sudden switch in
+            environment or demeanor, but rather a gradual evolution of an
+            individual and their public perception. Looking back to their
             original goal of fame, that individual realizes that they are pretty
             much the same as they were when they set out to achieve their
             dreams. Gradually, the reality of fame and popularity begins to fall
@@ -119,37 +121,40 @@
             childhood for her dreams. However, the success of Billie Eillish
             begins to get envie from onlookers, who now want to do what she
             does. This in turns, restarts the cycle of something being
-            overrated. However, this failed expectations of these individuals
-            are not the only contributor to the perception of something being
-            overrated. Much of this believe of something being overrated is
-            based on the perception of the individual. This individual further
-            pushes the idea that something is overrated, simply based on their
-            beliefs. Going back to the Billie Eillish example, some individuals
-            may dislike her music. This individual will see the success of
-            Billie Eillish, listen to her music, and they just won’t like it. In
-            their mind, things won’t add up, based on the popularity of Eillish,
-            she must make amazing music. In reality, popularity and function are
-            not linear. There is no exact equation that states that the more
-            popular someone is, the better their music will be. As a result,
-            when the magnitude of an individual’s popularity does not match up
-            with their performance, something just doesn’t make sense. As a
-            result, a narrative begins to form. Now, Billie Eillish is
-            overrated. Slowly, that narrative begins to spread, expanding the
-            overrated web. Throughout all of history, there tends to be an anti
-            thesis as well as a thesis. This thesis will be well established and
-            solidified throughout a long time span. However, gradually, there
-            begins to be an anti thesis, led by contrasting minds, who believe
-            in an alternative, the anti thesis. This same pattern occurs within
-            social life. Some truly believe in the anti thesis, whereas others
-            just want to be contrarian; just want to be different from the rest.
-            When there is a large instance of popularity occurring within a
-            product or individual, that is the thesis. However, as occurs within
+            overrated. <br />
+            &emsp;However, this failed expectations of these individuals are not
+            the only contributor to the perception of something being overrated.
+            Much of this believe of something being overrated is based on the
+            perception of the individual. This individual further pushes the
+            idea that something is overrated, simply based on their beliefs.
+            Going back to the Billie Eillish example, some individuals may
+            dislike her music. This individual will see the success of Billie
+            Eillish, listen to her music, and they just won’t like it. In their
+            mind, things won’t add up, based on the popularity of Eillish, she
+            must make amazing music. In reality, popularity and function are not
+            linear. There is no exact equation that states that the more popular
+            someone is, the better their music will be. As a result, when the
+            magnitude of an individual’s popularity does not match up with their
+            performance, something just doesn’t make sense. As a result, a
+            narrative begins to form. Now, Billie Eillish is overrated. Slowly,
+            that narrative begins to spread, expanding the overrated web.
+            Throughout all of history, there tends to be an anti thesis as well
+            as a thesis. This thesis will be well established and solidified
+            throughout a long time span. However, gradually, there begins to be
+            an anti thesis, led by contrasting minds, who believe in an
+            alternative, the anti thesis. This same pattern occurs within social
+            life. Some truly believe in the anti thesis, whereas others just
+            want to be contrarian; just want to be different from the rest. When
+            there is a large instance of popularity occurring within a product
+            or individual, that is the thesis. However, as occurs within
             history, there is an opposition to this thesis. This opposition is
             the overrated narrative. Individuals see the widespread success of
             something and simply want to express an opposing idea. They desire
             to be different, just for the sake of being different. This
             contrarian narrative begins to spread, further spreading the
-            overrated web. The terms underrated and overrated, are utilized to
+            overrated web. 
+            <br>
+            &emsp;The terms underrated and overrated, are utilized to
             establish a correlation between public perception of a subject or
             and individual and their actual value. However, this concept of
             something being overrated is largely arbitrary and presents three
@@ -163,28 +168,36 @@
         <hr />
         <div id="reactions">
           <div id="like">
-            <div id="likeImage"><img src="../assets/images/navbar/like (1).png" alt=""></div>
+            <div id="likeImage">
+              <img src="../assets/images/navbar/like (1).png" alt="" />
+            </div>
             <div id="likeResponse"><p>2</p></div>
             <div id="likeDescription">
               <p>Like</p>
             </div>
           </div>
           <div id="heart">
-            <div id="heartImage"><img src="../assets/images/navbar/heart.png" alt=""></div>
+            <div id="heartImage">
+              <img src="../assets/images/navbar/heart.png" alt="" />
+            </div>
             <div id="heartResponse"><p>2</p></div>
             <div id="heartDescription">
               <p>Heart</p>
             </div>
           </div>
           <div id="thought">
-            <div id="thoughtImage"><img src="../assets/images/navbar/lightbulb (1).png" alt=""></div>
+            <div id="thoughtImage">
+              <img src="../assets/images/navbar/lightbulb (1).png" alt="" />
+            </div>
             <div id="thoughtResponse"><p>2</p></div>
             <div id="thoughtDescription">
               <p>Thought Provoking</p>
             </div>
           </div>
           <div id="fire">
-            <div id="fireImage"><img src="../assets/images/navbar/fire.png" alt=""></div>
+            <div id="fireImage">
+              <img src="../assets/images/navbar/fire.png" alt="" />
+            </div>
             <div id="fireResponse"><p>4</p></div>
             <div id="fireDescription">
               <p>Fire</p>
