added homePage change slogan to fact

--- a/pages/forum/news.html
+++ b/pages/forum/news.html
@@ -78,7 +78,7 @@
     <div class="widgetContainer">
       <div class="customWidget">
         <div class="option">
-          <a href="forum.html"><h1 id="articleButton">Articles</h1></a>
+          <a href="../forum.html"><h1 id="articleButton">Articles</h1></a>
         </div>
         <div class="option">
           <a href="forum/news.html"><h1 id="newsButton">News</h1></a>
@@ -87,10 +87,10 @@
           <img src="../../assets/images/mainIMG.png" alt="" id="navImage" />
         </div>
         <div class="option">
-          <a href="forum/chat.html"> <h1 id="impactButton">Chat</h1></a>
+          <a href="../forum/chat.html"> <h1 id="impactButton">Chat</h1></a>
         </div>
         <div class="option">
-          <a href="forum/videos.html"><h1 id="videosButton">Videos</h1></a>
+          <a href="../forum/videos.html"><h1 id="videosButton">Videos</h1></a>
         </div>
       </div>
     </div>
