--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/generatlEl.css" />
     <link rel="stylesheet" href="styles/about.css" />
-    <script defer src="javascript/main.js"></script>
+    <script defer type="text/javascript" src="javascript/config.js"></script>
+    <script defer src="javascript/pages/index.js"></script>
     <link rel="icon" type="image/x-icon" href="assets/images/mainIMG.png" />
   </head>
   <body>
@@ -66,7 +67,7 @@
       </div>
     </div>
     <div id="slogan">
-      <h2>"Educate the Youth. Create a brighter tomorrow."</h2>
+      <h2 id="fact-container">"Educate the Youth. Create a brighter tomorrow."</h2>
     </div>
     <div class="mainIcon">
       <div class="imageHolder">
@@ -87,6 +88,5 @@
         </div>
       </div>
     </div>
-
   </body>
 </html>
