finished news Section

--- a/pages/account.html
+++ b/pages/account.html
@@ -86,6 +86,11 @@
         <div class="option">
           <a href="../ourMission.html"><h1 id="accountButton">Account</h1></a>
         </div>
+        <div class="option">
+          <a href="account/interests.html">
+            <h1 id="interestsButton">Interests</h1></a
+          >
+        </div>
         <div class="imageHolder">
           <img src="../../assets/images/mainIMG.png" alt="" id="navImage" />
         </div>
@@ -94,6 +99,7 @@
             <h1 id="publishButton">Publish</h1></a
           >
         </div>
+        
       </div>
     </div>
   </body>
