--- a/pages/forum/news.html
+++ b/pages/forum/news.html
@@ -15,7 +15,12 @@
     <link rel="stylesheet" href="../../styles/mainIconStyle.css" />
     <link rel="stylesheet" href="../../styles/news.css" />
     <link rel="stylesheet" href="../../styles/generatlEl.css" />
-    <!-- <script defer src="../javascript/main.js"></script> -->
+    <script
+      defer
+      type="text/javascript"
+      src="../../javascript/config.js"
+    ></script>
+    <script defer src="../../javascript/pages/account/news.js"></script>
     <link
       rel="icon"
       type="image/x-icon"
@@ -72,9 +77,7 @@
         </div>
       </div>
     </div>
-    <div class="mainSection">
-      <div class=""></div>
-    </div>
+    <div class="mainContainer"></div>
     <div class="widgetContainer">
       <div class="customWidget">
         <div class="option">
