--- a/pages/study.html
+++ b/pages/study.html
@@ -66,17 +66,57 @@
       </div>
     </div>
     <div class="mainSection">
-      
+      <div id="tipTile">
+        <div id="1" class="tip">
+          <div id="num_1" class="number">
+            <img src="../assets/images/numbers/1.png" alt="" />
+          </div>
+          <div id="tip_1" class="tipBox"><p id="tipText">Wash Your Hands</p></div>
+        </div>
+      </div>
+      <div id="tipTile">
+        <div id="2" class="tip">
+          <div id="num_2" class="number">
+            <img src="../assets/images/numbers/2 (1).png" alt="" />
+          </div>
+          <div id="tip_2" class="tipBox"><p id="tipText">Brush Your Teeth</p></div>
+        </div>
+      </div>
+      <div id="tipTile">
+        <div id="3" class="tip">
+          <div id="num_3" class="number"><img src="../assets/images/numbers/3.png" alt="" /></div>
+          <div id="tip_3" class="tipBox"><p id="tipText">Make sure to not get too distracted</p></div>
+        </div>
+      </div>
+      <div id="tipTile">
+        <div id="4" class="tip">
+          <div id="num_4" class="number"><img src="../assets/images/numbers/4.png" alt="" /></div>
+          <div id="tip_4" class="tipBox"><p id="tipText">Take a Break every now and then</p></div>
+        </div>
+      </div>
+      <div id="tipTile">
+        <div id="5" class="tip">
+          <div id="num_5" class="number"><img src="../assets/images/numbers/5.png" alt="" /></div>
+          <div id="tip_5" class="tipBox"><p id="tipText">Lock In</p></div>
+        </div>
+      </div>
+    </div>
     <div class="widgetContainer">
       <div class="customWidget">
         <div class="option">
           <a href="study.html"><h1 id="studyButton">Study Tips</h1></a>
         </div>
+        <div class="option">
+          <a href="forum/chat.html"> <h1 id="trackButton">School Track</h1></a>
+        </div>
         <div class="imageHolder">
           <img src="../assets/images/mainIMG.png" alt="" id="navImage" />
         </div>
         <div class="option">
-          <a href="forum/chat.html"> <h1 id="trackButton">School Track</h1></a>
+          <a href="study.html"><h1 id="dictionaryButton">Dictionary</h1></a>
+        </div>
+        <div class="option">
+          <a href="study.html"><h1 id="VocabButton">Vocab</h1></a>
         </div>
       </div>
     </div>
