--- a/pages/forum.html
+++ b/pages/forum.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="../styles/mainIconStyle.css" />
     <link rel="stylesheet" href="../styles/articles.css" />
     <link rel="stylesheet" href="../styles/generatlEl.css" />
-    <!-- <script defer src="../javascript/main.js"></script> -->
     <link rel="icon" type="image/x-icon" href="../assets/images/mainIMG.png" />
   </head>
   <body>
@@ -39,11 +38,11 @@
             <img
               src="../assets/images/navbar/active/growth (2).png"
               alt="about us"
-            /><!--Make this the blue growth thingl-->
+            />
           </a>
           <a id="study_div" href="study.html">
             <img src="../assets/images/navbar/open-book.png" alt="" />
-            <!-- <h1>What We Do</h1> -->
+       
           </a>
           <a id="community_div">
             <img src="../assets/images/navbar/community.png" alt="" />
@@ -318,4 +317,4 @@
       </div>
     </div>
   </body>
-</html>
+</html> -->
