--- a/pages/news.html
+++ b/pages/news.html
@@ -20,7 +20,7 @@
       type="text/javascript"
       src="../../javascript/config.js"
     ></script>
-    <script defer src="../../javascript/pages/account/news.js"></script>
+    <script defer src="../javascript/pages/account/news.js"></script>
     <link
       rel="icon"
       type="image/x-icon"
@@ -44,13 +44,13 @@
     <div class="frontContainer">
       <div class="frontPage">
         <div class="firstElements">
-          <a id="forum_div" href="../forum.html">
+          <a id="forum_div" href="news.html">
             <img
               src="../../assets/images/navbar/active/growth (2).png"
               alt="about us"
             /><!--Make this the blue growth thingl-->
           </a>
-          <a id="study_div" href="../study.html">
+          <a id="study_div" href="study.html">
             <img src="../../assets/images/navbar/open-book.png" alt="" />
             <!-- <h1>What We Do</h1> -->
           </a>
@@ -80,9 +80,9 @@
     <div class="mainContainer"></div>
     <div class="widgetContainer">
       <div class="customWidget">
-        <div class="option">
+        <!-- <div class="option">
           <a href="../forum.html"><h1 id="articleButton">Articles</h1></a>
-        </div>
+        </div> -->
         <div class="option">
           <a href="forum/news.html"><h1 id="newsButton">News</h1></a>
         </div>
@@ -93,7 +93,7 @@
           <a href="../forum/chat.html"> <h1 id="impactButton">Chat</h1></a>
         </div>
         <div class="option">
-          <a href="../forum/videos.html"><h1 id="videosButton">Videos</h1></a>
+          <a href="forum/videos.html"><h1 id="videosButton">Videos</h1></a>
         </div>
       </div>
     </div>
