--- a/pages/study/dictionary.html
+++ b/pages/study/dictionary.html
@@ -35,7 +35,7 @@
     <div class="frontContainer">
       <div class="frontPage">
         <div class="firstElements">
-          <a id="forum_div" href="../forum.html">
+          <a id="forum_div" href="../news.html">
             <img
               src="../../assets/images/navbar/growth.png"
               alt="about us"
