--- a/pages/study.html
+++ b/pages/study.html
@@ -35,7 +35,7 @@
     <div class="frontContainer">
       <div class="frontPage">
         <div class="firstElements">
-          <a id="forum_div" href="forum.html">
+          <a id="forum_div" href="news.html">
             <img
               src="../assets/images/navbar/growth.png"
               alt="about us"
@@ -45,7 +45,7 @@
             <img src="../assets/images/navbar/active/open-book.png" alt="" />
             <!-- <h1>What We Do</h1> -->
           </a>
-          <a id="community_div">
+          <a id="community_div" href="community.html">
             <img src="../assets/images/navbar/community.png" alt="" />
           </a>
         </div>
