fixed ghost links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="frontContainer">
       <div class="frontPage">
         <div class="firstElements">
-          <a id="forum_div" href="pages/forum.html">
+          <a id="forum_div" href="pages/news.html">
             <img src="assets/images/navbar/growth.png" alt="about us" />
           </a>
 
