--- a/pages/account.html
+++ b/pages/account.html
@@ -55,7 +55,7 @@
             <img src="../../assets/images/navbar/open-book.png" alt="" />
             <!-- <h1>What We Do</h1> -->
           </a>
-          <a id="community_div">
+          <a id="community_div" href="community.html">
             <img src="../../assets/images/navbar/community.png" alt="" />
           </a>
         </div>
