--- a/pages/forum/videos.html
+++ b/pages/forum/videos.html
@@ -44,7 +44,7 @@
     <div class="frontContainer">
       <div class="frontPage">
         <div class="firstElements">
-          <a id="forum_div" href="../forum.html">
+          <a id="forum_div" href="../news.html">
             <img
               src="../../assets/images/navbar/active/growth (2).png"
               alt="about us"
@@ -54,7 +54,7 @@
             <img src="../../assets/images/navbar/open-book.png" alt="" />
             <!-- <h1>What We Do</h1> -->
           </a>
-          <a id="community_div">
+          <a id="community_div" href="../community.html">
             <img src="../../assets/images/navbar/community.png" alt="" />
           </a>
         </div>
@@ -85,7 +85,7 @@
           <a href="../forum.html"><h1 id="articleButton">Articles</h1></a>
         </div> -->
         <div class="option">
-          <a href="forum/news.html"><h1 id="newsButton">News</h1></a>
+          <a href="../news.html"><h1 id="newsButton">News</h1></a>
         </div>
         <div class="imageHolder">
           <img src="../../assets/images/mainIMG.png" alt="" id="navImage" />
