--- a/pages/ourMission.html
+++ b/pages/ourMission.html
@@ -35,15 +35,15 @@
     <div class="frontContainer">
       <div class="frontPage">
         <div class="firstElements">
-          <a id="forum_div">
+          <a id="forum_div" href="news.html">
             <img src="../assets/images/navbar/growth.png" alt="about us" />
           </a>
 
-          <a id="study_div">
+          <a id="study_div" href="study.html">
             <img src="../assets/images/navbar/open-book.png" alt="" />
             <!-- <h1>What We Do</h1> -->
           </a>
-          <a id="community_div">
+          <a id="community_div" href="community.html">
             <img src="../assets/images/navbar/community.png" alt="" />
           </a>
         </div>
