--- a/pages/study/dictionary.html
+++ b/pages/study/dictionary.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../../styles/dictionary.css" />
     <link rel="stylesheet" href="../../styles/generatlEl.css" />
     <script defer src="../../javascript/pages/dictionary.js"></script>
-    <link rel="icon" type="image/x-icon" href="../assets/images/mainIMG.png" />
+    <link rel="icon" type="image/x-icon" href="../../assets/images/mainIMG.png" />
   </head>
   <body>
     <div class="background">
@@ -45,7 +45,7 @@
             <img src="../../assets/images/navbar/active/open-book.png" alt="" />
             <!-- <h1>What We Do</h1> -->
           </a>
-          <a id="community_div">
+          <a id="community_div" href="../community.html">
             <img src="../../assets/images/navbar/community.png" alt="" />
           </a>
         </div>
@@ -53,16 +53,16 @@
           <h1>Teens Teach</h1>
         </div>
         <div class="lastElements">
-          <a id="home_div" href="../index.html">
+          <a id="home_div" href="../../index.html">
             <img src="../../assets/images/navbar/home (1).png" alt="home" />
           </a>
-          <a id="mission_div" href="../pages/ourMission.html">
+          <a id="mission_div" href="../../pages/ourMission.html">
             <img
               src="../../assets/images/navbar/mission (2).png"
               alt="mission"
             />
           </a>
-          <a id="account_div" href="account.html">
+          <a id="account_div" href="../account.html">
             <img src="../../assets/images/navbar/user (1).png" alt="" />
           </a>
         </div>
