--- a/pages/news.html
+++ b/pages/news.html
@@ -90,7 +90,7 @@
           <img src="../../assets/images/mainIMG.png" alt="" id="navImage" />
         </div>
         <div class="option">
-          <a href="../forum/chat.html"> <h1 id="impactButton">Chat</h1></a>
+          <a href="forum/chat.html"> <h1 id="impactButton">Chat</h1></a>
         </div>
         <div class="option">
           <a href="forum/videos.html"><h1 id="videosButton">Videos</h1></a>
