--- a/pages/mission/aboutUs.html
+++ b/pages/mission/aboutUs.html
@@ -63,7 +63,10 @@
             <img src="../../assets/images/navbar/home (1).png" alt="home" />
           </a>
           <a id="mission_div" href="pages/ourMission.html">
-            <img src="../../assets/images/navbar/active/mission (3).png" alt="mission" />
+            <img
+              src="../../assets/images/navbar/active/mission (3).png"
+              alt="mission"
+            />
           </a>
           <a id="account_div" href="../account.html">
             <img src="../../assets/images/navbar/user (1).png" alt="" />
@@ -73,6 +76,16 @@
     </div>
     <div class="fullPage">
       <div class="mainSection">
+        <div class="divContainer">
+          <div class="tile" id="aboutDescription">
+            <p class="smallText">
+              The developers of the Teens Teach Website include Marlon, Lamarr,
+              Om, and Kennedy. Our developer team consists of that group of
+              four, however, the larger Teens Teach Organization is comprised of
+              5 members.
+            </p>
+          </div>
+        </div>
         <div class="divContainer">
           <div class="tile" id="aboutDescription">
             <p class="smallText">
