--- a/pages/forum/chat.html
+++ b/pages/forum/chat.html
@@ -79,7 +79,9 @@
     </div>
     <div class="mainSection">
       <div id="responseContainer">
-        <div id="responseText"></div>
+        <div id="responseText">
+          <p>Your formulated ChatGPT response will appear here:</p>
+        </div>
       </div>
       <div id="textContainer">
         <input
@@ -110,7 +112,7 @@
           <a href="forum/chat.html"> <h1 id="chatButton">Chat</h1></a>
         </div>
         <div class="option">
-          <a href="forum/videos.html"><h1 id="videosButton">Videos</h1></a>
+          <a href="videos.html"><h1 id="videosButton">Videos</h1></a>
         </div>
       </div>
     </div>
