fixed kennedy's name

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -80,7 +80,7 @@
               <img src="../assets/images/photos/Kennedy.png" alt="" />
             </div>
             <div class="personName">
-              <p class="nameClass">Kennedy Shepard</p>
+              <p class="nameClass">Kennedy Sheppard</p>
             </div>
             <hr />
             <div class="description">
