--- a/pages/study.html
+++ b/pages/study.html
@@ -140,7 +140,7 @@
           <a href="study.html"><h1 id="studyButton">Study Tips</h1></a>
         </div>
         <div class="option">
-          <a href="study/pathway.html"> <h1 id="trackButton">School Track</h1></a>
+          <a href="./study/pathway.html"> <h1 id="trackButton">School Track</h1></a>
         </div>
         <div class="imageHolder">
           <img src="../assets/images/mainIMG.png" alt="" id="navImage" />
