added QOL.js, added a couple of things to index, and linked the html to qol

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/navbarStyle.css" />
     <script defer type="text/javascript" src="javascript/config.js"></script>
     <script defer src="javascript/pages/index.js"></script>
+    <script defer src="javascript/go_to_ourMission.js"></script>
     <link rel="icon" type="image/x-icon" href="assets/images/mainIMG.png" />
   </head>
   <body>
@@ -69,6 +70,7 @@
     </div>
     <div id="slogan">
       <h2 id="fact-container">"Educate the Youth. Create a brighter tomorrow."</h2>
+      <h3 id = "donateMessage">Donate to our organization! Click our logo for more information</h3>
     </div>
     <div class="mainIcon">
       <div class="imageHolder">
