--- a/pages/account.html
+++ b/pages/account.html
@@ -19,6 +19,8 @@
       type="text/javascript"
       src="../javascript/pages/account/account.js"
     ></script>
+    <script defer src="../javascript/qol.js"></script>
+
     <!-- <link rel="stylesheet" href="../../styles/mission.css" /> -->
     <link rel="stylesheet" href="../../styles/navbarStyle.css" />
     <link rel="stylesheet" href="../../styles/backgroundPage.css" />
