--- a/pages/community.html
+++ b/pages/community.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="../../styles/backgroundPage.css" />
     <link rel="stylesheet" href="../../styles/mainIconStyle.css" />
     <link rel="stylesheet" href="../../styles/community.css" />
+    <script defer src="../javascript/qol.js"></script>
+
     <link
       rel="icon"
       type="image/x-icon"
