--- a/pages/ourMission.html
+++ b/pages/ourMission.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="../styles/generatlEl.css" />
     <script defer src="../javascript/main.js"></script>
     <link rel="icon" type="image/x-icon" href="../assets/images/mainIMG.png" />
+    <script defer src="../javascript/qol.js"></script>
+
   </head>
   <body>
     <div class="background">
