--- a/pages/study/dictionary.html
+++ b/pages/study/dictionary.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="../../styles/dictionary.css" />
     <link rel="stylesheet" href="../../styles/generatlEl.css" />
     <script defer src="../../javascript/pages/dictionary.js"></script>
+    <script defer src="../../javascript/qol.js"></script>
+
     <link rel="icon" type="image/x-icon" href="../../assets/images/mainIMG.png" />
   </head>
   <body>
