--- a/pages/community/donate.html
+++ b/pages/community/donate.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="../../styles/backgroundPage.css" />
     <link rel="stylesheet" href="../../styles/mainIconStyle.css" />
     <link rel="stylesheet" href="../../styles/donate.css" />
+    <script defer src="../../javascript/go_to_ourMission.js"></script>
+
     <link
       rel="icon"
       type="image/x-icon"
