--- a/pages/forum/chat.html
+++ b/pages/forum/chat.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="../../styles/mainIconStyle.css" />
     <link rel="stylesheet" href="../../styles/chat.css" />
     <link rel="stylesheet" href="../../styles/generatlEl.css" />
+    <script defer src="../../javascript/go_to_ourMission.js"></script>
+
     <script
       defer
       type="text/javascript"
