--- a/pages/mission/aboutUs.html
+++ b/pages/mission/aboutUs.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="../../styles/mission.css" />
     <link rel="stylesheet" href="../../styles/about.css" />
     <link rel="stylesheet" href="../../styles/contact.css" />
+    <script defer src="../../javascript/qol.js"></script>
+
     <!-- <script defer src="../../javascript/main.js"></script> -->
     <link
       rel="icon"
