--- a/pages/mission/ourImpact.html
+++ b/pages/mission/ourImpact.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="../../styles/mainIconStyle.css" />
     <link rel="stylesheet" href="../../styles/impact.css" />
     <link rel="stylesheet" href="../../styles/generatlEl.css" />
+    <script defer src="../../javascript/qol.js"></script>
+
     <link
       rel="icon"
       type="image/x-icon"
