--- a/pages/news.html
+++ b/pages/news.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="../../styles/mainIconStyle.css" />
     <link rel="stylesheet" href="../../styles/news.css" />
     <link rel="stylesheet" href="../../styles/generatlEl.css" />
+    <script defer src="../javascript/qol.js"></script>
+
     <script
       defer
       type="text/javascript"
