moved a couple of things

--- a/pages/community/donate.html
+++ b/pages/community/donate.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../../styles/backgroundPage.css" />
     <link rel="stylesheet" href="../../styles/mainIconStyle.css" />
     <link rel="stylesheet" href="../../styles/donate.css" />
-    <script defer src="../../javascript/go_to_ourMission.js"></script>
+    <script defer src="../../javascript/qol.js"></script>
 
     <link
       rel="icon"
